# nca-control

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: local-rule-training.md  maintenance-audit-2026-03-30.md  maze-extension.md  minimal-model-sweep.md  mlx-backend.md  mlx-minimal-model-plan.md  mlx-minimal-model-sweep.md  mlx-minimal-model-validation.md  mlx-seed-stability-plan.md  mlx-seed-stability-results.md  mlx-seed-stability-wip.md  presentation-plan.md  project-plan.md  python314-investigation-plan.md  python314-investigation-results.md  python314-investigation-wip.md  technical-report-plan.md  testing-strategy.md  training-observability-and-mps.md
report/: technical_presentation.tex  technical_report.tex
report/data/: backend_benchmark.csv  loss_curves.csv  loss_seed0_rerun.csv  loss_seed4_exploratory.csv  minimal_candidates.csv  seed_stability_loss_curves.csv  seed_stability_loss_seed0.csv  seed_stability_loss_seed1.csv  (+8 more)
scripts/: benchmark_backends.py  convert_torch_checkpoint_to_mlx.py  evaluate_generalization.py  evaluate_mlx_generalization.py  evaluate_mlx_one_step.py  evaluate_one_step.py  evaluate_rollout.py  export_report_data.py  infer_one_step.py  interactive_compare.py  sweep_mlx_minimal.py  sweep_mlx_seed_stability.py  train_mlx_one_step.py  train_one_step.py
tests/: test_dataset.py  test_evaluate.py  test_grid.py  test_inference.py  test_interactive.py  test_maze.py  test_mlx_backend.py  test_model.py  test_rollout_evaluate.py  test_seed_stability.py  test_simulation.py  test_train.py
tracking/: current-step.md  step-history.md
(+15 files in other folders)
