[project]
name = "nca-control"
version = "0.1.0"
description = "Stepwise research experiment for controllable neural cellular automata."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "numpy",
  "torch",
  "typer",
]

[project.scripts]
nca-control = "nca_control.cli:app"

[dependency-groups]
dev = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nca_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
